force-app/src/objects/TR1__Email_Opt_Out__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Add_Unsubscribe_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, an unsubscribe link will be added to every email send for the To field where the new email component is used.</inlineHelpText>
        <label>Add Unsubscribe Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Crypto_Key__c</fullName>
        <inlineHelpText>Private key used to encrypt/decrypt the parameters in the url for the unsubscribe link. It must be 32 characters size.</inlineHelpText>
        <label>Crypto Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Record_Owner__c</fullName>
        <inlineHelpText>The Default Owner of Candidate Opt-Out records is the Site owner (public page). You can enter a different user here</inlineHelpText>
        <label>Default Record Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Link_CSS__c</fullName>
        <inlineHelpText>Css inline applied to the Link Text</inlineHelpText>
        <label>Link CSS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Link_Text__c</fullName>
        <inlineHelpText>Hyperlinked text added to the outgoing email. If this field is left blank, the default link ‘Unsubscribe‘ is used</inlineHelpText>
        <label>Link Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Link_URL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__Page_Company_Name__c</fullName>
        <inlineHelpText>Company name appearing on top of the public page</inlineHelpText>
        <label>Page Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Page_Static_Resource_Name__c</fullName>
        <inlineHelpText>Static resource name used to customize the email opt-out public page</inlineHelpText>
        <label>Page Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Site_URL__c</fullName>
        <inlineHelpText>URL from Sites configured for email opt-out</inlineHelpText>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <label>Email Opt-Out</label>
    <pluralLabel>Email Opt-Out</pluralLabel>
</CustomObject>